# codetotrade-python-client

./: README.md  pyproject.toml
src/coin_algorithm/domain/: bar.py  bar_series.py  base_bot.py  bot_config.py  bot_order_type.py  chart.py  coin_info.py  plot.py  signal.py  time_travel.py  trade_metadata.py
src/coin_algorithm/example/: main.py
src/coin_algorithm/example/bot/: __init__.py  my_simple_bot.py
src/coin_algorithm/server/: back_test_server.py  binance_server.py
src/coin_algorithm/service/: back_test_data.py  back_test_service.py  binance_service.py
src/coin_algorithm/service/exchange/binance/: binance_future_connector.py
src/coin_algorithm/service/grpc/: coin_service_pb2.py  coin_service_pb2_grpc.py
