[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coin-algorithm"
version = "1.1"
authors = [
  { name="Khang Truong", email="truongnhukhang1993@gmail.com" },
]
description = " A codetotrade.app python client"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["coin-algorithm", "codetotrade.app", "python", "client"]
dependencies = [
    "grpcio==1.66.0",
    "protobuf==5.27.2",
    "binance-futures-connector==4.0.0",
]
[project.urls]
homepage = "https://codetotrade.app"
documentation = "https://docs.codetotrade.app"
repository = "https://github.com/truongnhukhang/codetotrade-python-client"
[tool.hatch.build.targets.sdist]
exclude = [
  "*.idea",
]